# ps4_stereo_camera

./: CMakeLists.txt  README.md  hector_pseye_camera_nodelet.xml  mainpage.dox  manifest.xml  package.xml  ps4_stereo_camera_nodelet.xml
config/: ps4_cam_left.ini  ps4_cam_right.ini  ps_eye.ini  ps_eye_320_tracking_experiments.ini  ps_eye_640_tracking_experiments.ini
launch/: calibrate.launch  calibrate_small.launch  dual_cam.launch  elas_ros.launch  ps4_stereo_camera_default.launch  ps_eye.launch  ps_eye_640_fast.launch  ps_eye_fast.launch  ps_eye_with_image_proc.launch  view_stereo.launch
scripts/: create_udev_rules
src/: libcam.cpp  libcam.h  node.cpp  nodelet.cpp
