<?xml version="1.0"?>
<package>
  <name>hector_pseye_camera</name>
  <version>0.0.0</version>
  <description>The hector_pseye_camera package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>GPLv3</license>
  <!-- Based on the V4L2/Minoru packages by Bob Mottram and Giacomo Spigler
  See also
  https://github.com/bashrc/libv4l2cam
  http://code.google.com/p/sentience/wiki/MinoruWebcam
  -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/hector_pseye_camera_nodelet.xml" />
  </export>
</package>